Update the ignore file
Exclude /task/log directory Neurobs Presentation creates.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
-# ignore Presentation (Neurobehavioral Systems) experiment files
+# ignore Presentation (Neurobehavioral Systems) files
 *.exp
+/log/*
