--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
-# ignore Presentation (Neurobehavioral Systems) files
+# Presentation (Neurobehavioral Systems) files
 *.exp
 /task/log/*
+
+# Windows / OSX files
+*.DS_store
+Thumbs.db
+
+# Office files
+*.xlsx
