Update the ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@ Thumbs.db
 *.xlsx
 
 # Folders
-/IRB
-/data
-/figures
-!README.md # still version control the readme files
+/IRB/*
+/data/*
+/figures/*
+# still version control the readme files
+!README.md
